--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="container">
+          <h3>Developed By Navin</h3>
         <div class="small__container">
-            <h1 class="title">ToDo-List</h1>
+            <h1 class="title">To Do-List</h1>
             <div class="inner">
                 <input type="text" id="inputbox" placeholder="Enter a task" required>
-                <button id="btn"> ADD</button>
+                <button id="btn"> ADD List</button>
             </div>
             <div class="inner__two">
                 <ul id="to-do">
@@ -24,7 +25,7 @@
                 </ul>
             </div>
         </div>
-        <h3>Developed By Navin</h3>
+      
     </div>
     <script src="./main.js"></script>
 </body>
