--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="icon" type="image/x-icon" href="./images/todo.jpg">
 </head>
 <body>
+       <center><h3>Developed By Navin</h3></center>
     <div class="container">
-          <h3>Developed By Navin</h3>
+       
         <div class="small__container">
             <h1 class="title">To Do-List</h1>
             <div class="inner">
